--- a/src/TRAISI/ClientApp/src/admin-app/app/account-management/user-info/user-info.component.html
+++ b/src/TRAISI/ClientApp/src/admin-app/app/account-management/user-info/user-info.component.html
@@ -207,8 +207,7 @@
                     [class.edit-separator-hr]="isEditMode">
             </div>
         </div>
-
-
+        
         <div
             *ngIf="isEditMode"
             class="form-group row">
@@ -399,6 +398,44 @@
             </div>
         </div>
 
+        <div class="form-group row">
+            <label
+                [class.col-md-3]="isViewOnly"
+                [class.col-md-2]="!isViewOnly"
+                class="col-form-label text-md-right"
+                for="Role">
+                {{'Role: ' | translate}}
+            </label>
+            <div
+                *ngIf="!isEditMode"
+                [class.col-md-9]="isViewOnly"
+                [class.col-md-7]="!isViewOnly">
+                <p class="form-control bg-gray-lighter">{{Role}}</p>
+            </div>
+            <div
+                *ngIf="isEditMode"
+                [class.col-md-9]="isViewOnly"
+                [class.col-md-7]="!isViewOnly">                    
+                    <select name="role" ng-model="roleSelect" class="form-control">
+                        <br>
+                        <option value="">--Select the Role--</option>
+                        <option value="1">Traisi</option>
+                        <option value="2">Management Staff</option>
+                        <option value="3">Team Leaders and Supervisors</option>
+                        <option value="4">Telephone Interviewers</option>
+                        <option value="5">QC Analysts</option>
+                    </select>
+            </div>
+        </div>
+        <div
+            *ngIf="isEditMode"
+            class="row">
+            <div class="col-md-12">
+                <hr
+                    [class.separator-hr]="!isEditMode"
+                    [class.edit-separator-hr]="isEditMode">
+            </div>
+        </div>
 
         <div class="form-group row">
             <label
