Set default value in Sample Action dropdown

--- a/src/TRAISI/ClientApp/src/admin-app/app/sample-management/sample-management.component.html
+++ b/src/TRAISI/ClientApp/src/admin-app/app/sample-management/sample-management.component.html
@@ -67,6 +67,7 @@
 							<select aria-placeholder="Select a sample action" id="state" aria-labelledby="sampleState"
 								style="clear:right;" name="state" (change)="onStateChanged()" [(ngModel)]="model.state"
 								class="form-control" required>
+								<option value="">Select a sample action</option>
 								<option value="Activate">Activate</option>
 								<option value="Deactivate">Deactivate</option>
 								<option value="Reject">Reject</option>
