--- a/src/TRAISI/ClientApp/src/admin-app/app/surveys-management/surveys-management.component.html
+++ b/src/TRAISI/ClientApp/src/admin-app/app/surveys-management/surveys-management.component.html
@@ -71,7 +71,8 @@
 											</span>
 											Execute
 										</button>
-										<button class="btn btn-primary col rounded-0">
+										<button class="btn btn-primary col rounded-0"
+											[routerLink]="['/app/survey-analyze']">
 											<span>
 												<i class="fas fa-chart-bar" aria-hidden="true"></i>
 											</span>
