Client ExportZip has selected fileformat, no pdf.

--- a/src/Traisi.ClientApp/src/admin-app/app/survey-exportresponses/survey-exportresponses.component.html
+++ b/src/Traisi.ClientApp/src/admin-app/app/survey-exportresponses/survey-exportresponses.component.html
@@ -6,7 +6,7 @@
 		<select [(ngModel)]="fileFormat" style="width: 200px; height: 30px;">
 			<option>CSV</option>
 			<option>Excel</option>
-			<option>PDF</option>
+			<!-- <option>PDF</option> -->
 		</select>
 		<br/><br/>
 	</div>
