--- a/src/Traisi.ClientApp/src/admin-app/app/survey-analyze/survey-analyze.component.html
+++ b/src/Traisi.ClientApp/src/admin-app/app/survey-analyze/survey-analyze.component.html
@@ -6,9 +6,7 @@
         <!--Sample Distribution Analysis-->
         <div class="row">
             <div class="card-body" style="margin-left: 1rem;">
-                <h6 class="card-title">Toronto Trasit Survey 2021 Sample Distribution</h6>
-                <p class="card-text">TRAISI Transit Survey Sample Collection in Eight Municipal Regions
-                </p>
+                <div style="height: 0.5rem;"></div> 
                 <div class="row">
                     <div class="col-md-4 text-primary" style="text-align: left; height: 3.7rem;">Impact of
                         COVID-19 on
@@ -16,21 +14,26 @@
                     <div class="col-md-2" style="text-align: center;">{{daysInField}} <br> Days in Field</div>
                     <div class="col-md-2" style="text-align: center;">{{avgResponsePerDay}}<br> Avg Response/Day
                     </div>
-                    <div class="col-md-2" style="text-align: center;">{{completed}} <br> Completed</div>
+                    <div class="col-md-2" style="text-align: center;">{{completed}} <br> Complete</div>
+                    <div class="col-md-2" style="text-align: center;">{{incomplete}}<br> Incomplete
+                    </div>
                 </div>
                 <div class="progress" style="height:1.5rem;">
-                    <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="0"
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 100%" aria-valuenow="0"
                         aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
                 <div style="height: 1.5rem;"></div>
-                <div *ngFor="let item of responses" class="row" style="clear:right;">
-                    <div class="col-2">{{item.region}} Region</div>
-                    <div class="col-6" style="height:2.5rem;">
+                <div *ngFor="let item of responses;" class="row" style="clear:right;">
+                    <div class="col-2">{{item.city}}</div>
+                    <div class="col-6" style="height:2.5rem; width:400px;">
                         <div class="progress" style="height:1.5rem;">
-                            <div class="{{item.colorClass}}" [style.width]="item.percentage"></div>
+                            <!-- <div class="{{item.colorClass}}" [style.width]="item.percentage"></div> -->
+                            <div class="progress-bar bg-success" [style.width]="item.percentage"></div> 
+                            <div class="progress-bar bg-danger" [style.width]="item.pending"></div>
                         </div>
                     </div>
-                    <div class="col-4">{{item.resCount}}/{{item.totalSurveys}}</div>
+                    <!-- <div class="col-4">{{item.count}}/3500</div> -->
+                    <div class="col-4">{{item.compSurveyByCity}} (Complete) / {{item.incompSurveyByCity}} (Incomplete)</div>
                 </div>
             </div>
         </div>
