--- a/src/Traisi.ClientApp/src/admin-app/app/surveys-management/surveys-management.component.html
+++ b/src/Traisi.ClientApp/src/admin-app/app/surveys-management/surveys-management.component.html
@@ -72,7 +72,7 @@
 											Execute
 										</button>
 										<button class="btn btn-primary col rounded-0"
-											[routerLink]="['/app/survey-analyze']">
+											[routerLink]="['/app/survey-analyze', row.id]">
 											<span>
 												<i class="fas fa-chart-bar" aria-hidden="true"></i>
 											</span>
