--- a/src/Traisi.ClientApp/src/admin-app/app/survey-analyze/survey-analyze.component.html
+++ b/src/Traisi.ClientApp/src/admin-app/app/survey-analyze/survey-analyze.component.html
@@ -22,6 +22,13 @@
                     <div class="progress-bar bg-warning" role="progressbar" style="width: 100%" aria-valuenow="0"
                         aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
+                <br/>
+                <div style="height: 1.5rem; color: blue; margin-left: 1rem;">
+                   Region: <select  [(ngModel)]="selectedRegion" (change)="doFilter()" style="height: 1.5rem;" >
+                        <option *ngFor="let item of actualResponses;">{{item.city}}</option>
+                    </select>
+                </div>
+                
                 <div style="height: 1.5rem;"></div>
                 <div *ngFor="let item of responses;" class="row" style="clear:right;">
                     <div class="col-2">{{item.city}}</div>
