--- a/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-item/travel-diary-scheduler-item.component.html
+++ b/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-item/travel-diary-scheduler-item.component.html
@@ -155,6 +155,7 @@
 				</button>
 				<button
 					type="button"
+					[disabled]="!state.isValid"
 					class="btn btn-primary confirm-complete-schedule"
 					(click)="confirmScheduleItemAndComplete()"
 					*ngIf="scheduleIndex > 0"
