Dropoff/pickup purposes are merged Fixed validation for certain address inputs

--- a/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-dialog-input/travel-diary-scheduler-dialog-input.component.html
+++ b/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-dialog-input/travel-diary-scheduler-dialog-input.component.html
@@ -56,20 +56,21 @@
 							<ng-option [value]="-1">Facilitate non-family member</ng-option>
 						</ng-select>
 					</div>
-					<div class="col-12" *ngFor="let passenger of model.meta?.passengers">
-						<div *ngIf="passenger !== -1">
+
+					<ng-container *ngIf="state.isDropOffOrPickup && model.meta.passengers?.length > 0">
+						<div class="col-12">
 							<label for="members" class="col-form-label"
-								>What purpose is passenger {{ passenger.name }}?</label
+								>What purpose is the purpose for this trip?</label
 							>
 							<ng-select
 								placeholder="Enter a purpose"
 								bindLabel="label"
 								bindValue="id"
 								required
-								(change)="onFacilitatePassengerPurposeChanged($event, passenger)"
+								(change)="onFacilitatePassengerPurposeChanged($event)"
 							>
 								<ng-option
-									*ngIf="respondentsData.respondent[passenger.id]"
+									*ngIf="respondentsData.respondent[primaryRespondent.id]"
 									[value]="respondentsData.homeLocation?.purpose"
 									><div class="purpose-label">
 										<i class="fas fa-star star-location"></i
@@ -79,29 +80,30 @@
 										{{ respondentsData.homeLocation?.address | addressDisplay }}
 									</div></ng-option
 								>
-
-								<ng-option
-									*ngFor="let school of respondentsData.respondent[passenger.id].schoolLocations"
-									[value]="school.purpose"
-									><div class="purpose-label">
-										<i class="fas fa-star star-location"></i>{{ school.purpose.label }} -
-										{{ passenger.name }}
-									</div>
-									<div class="purpose-address">
-										{{ school.address | addressDisplay }}
-									</div></ng-option
-								>
-								<ng-option
-									*ngFor="let work of respondentsData.respondent[passenger.id].workLocations"
-									[value]="work.purpose"
-									><div class="purpose-label">
-										<i class="fas fa-star star-location"></i>{{ work.purpose.label }} -
-										{{ passenger.name }}
-									</div>
-									<div class="purpose-address">
-										{{ work.address | addressDisplay }}
-									</div></ng-option
-								>
+								<ng-container *ngFor="let respondent of respondents$ | async">
+									<ng-option
+										*ngFor="let school of respondentsData.respondent[respondent.id].schoolLocations"
+										[value]="school.purpose"
+										><div class="purpose-label">
+											<i class="fas fa-star star-location"></i>{{ school.purpose.label }} -
+											{{ respondent.name }}
+										</div>
+										<div class="purpose-address">
+											{{ school.address | addressDisplay }}
+										</div></ng-option
+									>
+									<ng-option
+										*ngFor="let work of respondentsData.respondent[respondent.id].workLocations"
+										[value]="work.purpose"
+										><div class="purpose-label">
+											<i class="fas fa-star star-location"></i>{{ work.purpose.label }} -
+											{{ respondent.name }}
+										</div>
+										<div class="purpose-address">
+											{{ work.address | addressDisplay }}
+										</div></ng-option
+									>
+								</ng-container>
 								<ng-container *ngFor="let purpose of purposes">
 									<ng-option [value]="purpose" *ngIf="!purpose.isDropOffOrPickup"
 										><div class="purpose-label">{{ purpose.label }}</div></ng-option
@@ -109,7 +111,7 @@
 								</ng-container>
 							</ng-select>
 						</div>
-					</div>
+					</ng-container>
 				</div>
 				<div [class.missingMap]="model && !model.address">
 					<ng-template #mapTemplate>
