--- a/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-dialog-input/travel-diary-scheduler-dialog-input.component.html
+++ b/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-dialog-input/travel-diary-scheduler-dialog-input.component.html
@@ -4,7 +4,7 @@
 	class="modal fade"
 	[config]="{ ignoreBackdropClick: true }"
 	(onShown)="modalShown($event)"
-	(onHidden)="modalHidden( $event)"
+	(onHidden)="modalHidden($event)"
 >
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
@@ -131,5 +131,13 @@
 				</button>
 			</div>
 		</div>
+	</div>
+</div>
+
+<div bsModal #confirmModal="bs-modal">
+	<div class="modal-body text-center">
+		<p>Do you want to confirm?</p>
+		<button type="button" class="btn btn-default" (click)="confirmReturnHome()">Yes</button>
+		<button type="button" class="btn btn-primary" (click)="declineReturnHome()">No</button>
 	</div>
 </div>
