Text changes for return home dialog

--- a/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-dialog-input/travel-diary-scheduler-dialog-input.component.html
+++ b/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-dialog-input/travel-diary-scheduler-dialog-input.component.html
@@ -136,7 +136,7 @@
 
 <div bsModal #confirmModal="bs-modal">
 	<div class="modal-body text-center">
-		<p>Do you want to confirm?</p>
+		<p>Did you return home at the end of the day?</p>
 		<button type="button" class="btn btn-default" (click)="confirmReturnHome()">Yes</button>
 		<button type="button" class="btn btn-primary" (click)="declineReturnHome()">No</button>
 	</div>
