--- a/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-item/travel-diary-scheduler-item.component.html
+++ b/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-item/travel-diary-scheduler-item.component.html
@@ -54,9 +54,11 @@
 							{{ work.address | addressDisplay }}
 						</div></ng-option
 					>
-					<ng-option *ngFor="let purpose of purposes" [value]="purpose"
-						><div class="purpose-label">{{ purpose.label }}</div>
-					</ng-option>
+					<ng-container *ngFor="let purpose of purposes" >
+						<ng-option [value]="purpose" *ngIf="(purpose.allowFirstLocation && scheduleIndex === 0) || scheduleIndex > 0"
+							><div class="purpose-label">{{ purpose.label }}</div>
+						</ng-option>
+					</ng-container>
 				</ng-select>
 				<div class="purpose-address" *ngIf="model.address">
 					{{ model.address | addressDisplay }}
@@ -187,7 +189,7 @@
 		<div class="modal-content">
 			<div class="modal-header"></div>
 			<div class="modal-body text-center">
-				<p>Did {{respondent.name}} return home at the end of the day?</p>
+				<p>Did {{ respondent.name }} return home at the end of the day?</p>
 				<button type="button" class="btn btn-primary" (click)="confirmReturnHome()">Yes</button>
 				<button type="button" class="btn btn-default" (click)="declineReturnHome()">No</button>
 			</div>
