Date is displayed when selected

--- a/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-item/travel-diary-scheduler-item.component.html
+++ b/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-item/travel-diary-scheduler-item.component.html
@@ -95,7 +95,10 @@
 				[class.has-error]="state.errorState?.invalidTime"
 				[class.no-error]="!state.errorState?.invalidTime"
 			>
-				<label for="timeA" class="col-form-label">Departure time for the trip </label>
+				<label for="timeA" class="col-form-label">Departure time for the trip 
+					<span *ngIf="model.timeA" class="time-display">({{model.timeA | date:'short' }})</span>
+
+				</label>
 				<div class="input-group" [class.ng-invalid]="!model.timeA">
 					<div class="input-group-prepend">
 						<span class="input-group-text" id="inputGroupPrepend2"><i class="far fa-clock"></i></span>
