--- a/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-item/travel-diary-scheduler-item.component.scss
+++ b/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-item/travel-diary-scheduler-item.component.scss
@@ -59,6 +59,11 @@
 	font-weight: bold;
 }
 
+.time-display {
+	font-size: 12px;
+	font-weight:bold;
+}
+
 .error {
 	font-size: 14px;
 	font-weight: bold;
