--- a/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-item/travel-diary-scheduler-item.component.html
+++ b/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-item/travel-diary-scheduler-item.component.html
@@ -172,7 +172,7 @@
 					(click)="confirmScheduleItemAndComplete()"
 					*ngIf="scheduleIndex > 0"
 				>
-					{{ respondent.name }} made no more trips
+					This is the last location
 				</button>
 
 				<button
