--- a/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-dialog-input/travel-diary-scheduler-dialog-input.component.html
+++ b/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-dialog-input/travel-diary-scheduler-dialog-input.component.html
@@ -35,8 +35,8 @@
 						</ng-select>
 					</div>
 					<div class="col-12" *ngIf="state.isDropOffOrPickup">
-						<label for="members" class="col-form-label"
-							>Who is {{ respondentName }} dropping off or picking up?</label
+						<label for="members" class="col-form-label">
+							Who is being dropped off or picked up by {{ respondentName }}?</label
 						>
 						<ng-select
 							appearance="outline"
@@ -133,5 +133,3 @@
 		</div>
 	</div>
 </div>
-
-
