--- a/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-dialog-input/travel-diary-scheduler-dialog-input.component.html
+++ b/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-dialog-input/travel-diary-scheduler-dialog-input.component.html
@@ -60,7 +60,7 @@
 
 					<ng-container *ngIf="state.isDropOffOrPickup && model.meta.passengers?.length > 0">
 						<div class="col-12">
-							<label for="members" class="col-form-label">What is the purpose for this trip?</label>
+							<label for="members" class="col-form-label">What is the member's activity purpose at this location?</label>
 							<ng-select
 								placeholder="Enter a purpose"
 								bindLabel="label"
