--- a/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-dialog-input/travel-diary-scheduler-dialog-input.component.html
+++ b/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-dialog-input/travel-diary-scheduler-dialog-input.component.html
@@ -17,7 +17,7 @@
 			<div class="modal-body">
 				<div class="form-group row">
 					<div class="col-12" *ngIf="state.collectFamilyMembers">
-						<label for="members" class="col-form-label">Family members who attended this activity</label>
+						<label for="members" class="col-form-label">Is there any other family members who also traveled with {{respondentName}} to this location? Please leave it blank if travelled alone.</label>
 						<ng-select
 							appearance="outline"
 							#memberSelect
